--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Aegina Suite Ike | Luxury Property Management</title>
+  <title>Aegina Suites IKE | Luxury Property Management</title>
   <link rel="stylesheet" href="style.css" />
   <!-- GSAP -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
@@ -13,16 +13,18 @@
 </head>
 <body>
 
+  <!-- Logo outside navbar, top-left -->
+  <header class="header-logo">
+    <a href="#" aria-label="Aegina Suites IKE homepage" class="logo">Aegina Suites IKE</a>
+  </header>
+
   <nav class="navbar" role="navigation" aria-label="Primary Navigation">
-    <div class="nav-container">
-      <a href="#" class="logo" aria-label="Aegina Suite Ike homepage">Aegina Suite Ike</a>
-      <ul class="nav-menu">
-        <li><a href="#hero" tabindex="0">Home</a></li>
-        <li><a href="#about" tabindex="0">About</a></li>
-        <li><a href="#team" tabindex="0">Team</a></li>
-        <li><a href="#report" tabindex="0">Report</a></li>
-      </ul>
-    </div>
+    <ul class="nav-menu">
+      <li><a href="#hero" tabindex="0">Home</a></li>
+      <li><a href="#about" tabindex="0">About</a></li>
+      <li><a href="#team" tabindex="0">Team</a></li>
+      <li><a href="#report" tabindex="0">Report</a></li>
+    </ul>
   </nav>
 
   <!-- Hero Section -->
@@ -40,7 +42,7 @@
     <hr class="section-separator" />
     <h2 id="about-heading">About Us</h2>
     <p>
-      Aegina Suite Ike offers premier property management services in the Saronic Gulf, providing luxury, comfort, and flawless hospitality tailored for discerning clients and visitors.
+      Aegina Suites IKE offers premier property management services in the Saronic Gulf, providing luxury, comfort, and flawless hospitality tailored for discerning clients and visitors.
     </p>
   </section>
 
@@ -68,7 +70,7 @@
   </section>
 
   <!-- Report Section -->
-  <section id="report" class="content-section" tabindex="-1" aria-labelledby="report-heading">
+  <section id="report" class="content-section report-section" tabindex="-1" aria-labelledby="report-heading">
     <hr class="section-separator" />
     <h2 id="report-heading">Annual Earnings Report</h2>
     <a href="AeginaSuite_AnnualReport.pdf" download class="btn-primary report-download" aria-label="Download Annual Earnings Report">
