--- a/index.html
+++ b/index.html
@@ -3,81 +3,57 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Aegina Suites IKE | Luxury Property Management</title>
+  <title>Aegina Suites IKE</title>
   <link rel="stylesheet" href="style.css" />
-  <!-- GSAP -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-  <!-- Three.js -->
-  <script src="https://cdn.jsdelivr.net/npm/three@0.155.0/build/three.min.js"></script>
 </head>
 <body>
-
-  <!-- Logo outside navbar, top-left -->
-  <header class="header-logo">
-    <a href="#" aria-label="Aegina Suites IKE homepage" class="logo">Aegina Suites IKE</a>
+  <header>
+    <div class="logo">Aegina Suites IKE</div>
+    <nav class="liquid-glass-nav">
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#earnings">Earnings Report</a></li>
+        <li><a href="#team">Team</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <nav class="navbar" role="navigation" aria-label="Primary Navigation">
-    <ul class="nav-menu">
-      <li><a href="#hero" tabindex="0">Home</a></li>
-      <li><a href="#about" tabindex="0">About</a></li>
-      <li><a href="#team" tabindex="0">Team</a></li>
-      <li><a href="#report" tabindex="0">Report</a></li>
-    </ul>
-  </nav>
+  <main>
+    <section id="home" class="section">
+      <h1>Aegina Suites IKE</h1>
+      <p class="subtitle">Delivering boutique luxury experiences in Aegina</p>
+    </section>
 
-  <!-- Hero Section -->
-  <section id="hero" class="hero-section" aria-label="Introduction">
-    <canvas id="hero-canvas" aria-hidden="true"></canvas>
-    <div class="hero-content">
-      <h1 class="hero-title">Property Management in the Saronic Gulf</h1>
-      <p class="hero-subtitle">Delivering boutique luxury experiences in Aegina, Hydra, and Poros</p>
-      <a href="#about" class="btn-primary" aria-label="Learn more about us">Learn More</a>
-    </div>
-  </section>
+    <section id="about" class="section">
+      <h2>About Us</h2>
+      <p>
+        Aegina Suites IKE specializes in luxury boutique stays on the beautiful island of Aegina.
+      </p>
+    </section>
 
-  <!-- About Section -->
-  <section id="about" class="content-section" tabindex="-1" aria-labelledby="about-heading">
-    <hr class="section-separator" />
-    <h2 id="about-heading">About Us</h2>
-    <p>
-      Aegina Suites IKE offers premier property management services in the Saronic Gulf, providing luxury, comfort, and flawless hospitality tailored for discerning clients and visitors.
-    </p>
-  </section>
+    <section id="earnings" class="section">
+      <h2>Earnings Report</h2>
+      <p>Download our <a href="AeginaSuite_AnnualReport.pdf" download>Annual Report (PDF)</a></p>
+      <!-- Removed hex circles as requested -->
+    </section>
 
-  <!-- Team Section -->
-  <section id="team" class="content-section" tabindex="-1" aria-labelledby="team-heading">
-    <hr class="section-separator" />
-    <h2 id="team-heading">Our Team</h2>
-    <div class="team-grid">
-      <article class="team-card expandable" tabindex="0" aria-expanded="false" aria-controls="panagiotis-bio">
-        <h3 class="team-name">PANAGIOTIS MARKIDIS</h3>
-        <p class="team-role">CEO & Co-Founder</p>
-        <div id="panagiotis-bio" class="team-bio">
-          <p>Panagiotis brings 15+ years of luxury property management experience with a focus on client satisfaction and operational excellence.</p>
-        </div>
-      </article>
+    <section id="team" class="section">
+      <h2>Our Team</h2>
+      <ul>
+        <li>Panagiotis Markidis - CEO</li>
+        <li>Christina Economopoulou - COO</li>
+      </ul>
+    </section>
 
-      <article class="team-card expandable" tabindex="0" aria-expanded="false" aria-controls="christina-bio">
-        <h3 class="team-name">CHRISTINA ECONOMOPOULOU</h3>
-        <p class="team-role">COO & Co-Founder</p>
-        <div id="christina-bio" class="team-bio">
-          <p>Christina oversees day-to-day operations ensuring seamless service delivery and innovative guest experiences.</p>
-        </div>
-      </article>
-    </div>
-  </section>
+    <section id="contact" class="section">
+      <h2>Contact Us</h2>
+      <p>Email: contact@aeginasuites.gr</p>
+      <p>Phone: +30 123 456 7890</p>
+    </section>
+  </main>
 
-  <!-- Report Section -->
-  <section id="report" class="content-section report-section" tabindex="-1" aria-labelledby="report-heading">
-    <hr class="section-separator" />
-    <h2 id="report-heading">Annual Earnings Report</h2>
-    <a href="AeginaSuite_AnnualReport.pdf" download class="btn-primary report-download" aria-label="Download Annual Earnings Report">
-      Download Report
-    </a>
-  </section>
-
-  <script src="app.js" defer></script>
+  <script src="app.js"></script>
 </body>
 </html>
