--- a/index.html
+++ b/index.html
@@ -5,54 +5,66 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Aegina Suites IKE</title>
   <link rel="stylesheet" href="style.css" />
-  <script defer src="app.js"></script>
 </head>
 <body>
 
   <header class="site-header">
-    <div class="logo">Aegina Suites IKE</div>
-    <nav class="glass-nav">
+    <div class="logo">Aegina Suites IKE</div>
+    <nav class="glass-nav" aria-label="Primary Navigation">
       <ul>
-        <li><a href="#about">About Us</a></li>
+        <li><a href="#hero">Home</a></li>
+        <li><a href="#about">About</a></li>
         <li><a href="#team">Team</a></li>
-        <li><a href="#report">Earnings Report</a></li>
+        <li><a href="#report">Report</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
   </header>
 
-  <main>
-    <section class="hero">
-      <h1 class="main-title">Property Management in the <span>Saronic Gulf</span></h1>
-      <p class="subtitle">Delivering boutique luxury experiences in Aegina</p>
-    </section>
+  <section id="hero" class="hero">
+    <canvas id="hero-canvas"></canvas>
+    <div class="hero-content">
+      <h1>Property Management in the <span>Saronic Gulf</span></h1>
+      <p>Delivering boutique luxury experiences in Aegina</p>
+      <a href="#about" class="btn">Learn More</a>
+    </div>
+  </section>
 
-    <section id="about" class="content glass">
-      <h2>About Us</h2>
-      <p>We specialize in premium property management services across the stunning Saronic Gulf region, ensuring a seamless experience for homeowners and renters.</p>
-    </section>
+  <section id="about" class="section glass">
+    <h2>About Us</h2>
+    <p>Aegina Suites IKE specializes in luxury boutique property management on Aegina—thoughtful design, seamless service, local expertise.</p>
+  </section>
 
-    <section id="team" class="content glass">
-      <h2>Our Team</h2>
-      <div class="team-member">
-        <h3>Panagiotis Markidis</h3>
-        <p>Founder & CEO</p>
+  <section id="team" class="section glass">
+    <h2>Our Team</h2>
+    <div class="team-grid">
+      <div class="team-card" tabindex="0" aria-expanded="false">
+        <h3>Panagiotis Markidis</h3>
+        <p>CEO & Co‑Founder</p>
+        <div class="bio">Panagiotis brings 15+ years in luxury property management, ensuring operational excellence and client delight.</div>
       </div>
-      <div class="team-member">
-        <h3>Christina Economopoulou</h3>
-        <p>Client Experience Lead</p>
+      <div class="team-card" tabindex="0" aria-expanded="false">
+        <h3>Christina Economopoulou</h3>
+        <p>COO & Co‑Founder</p>
+        <div class="bio">Christina oversees daily operations, crafting seamless guest experiences from check‑in to check‑out.</div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section id="report" class="content glass">
-      <h2>Annual Earnings Report</h2>
-      <a href="AeginaSuite_AnnualReport.pdf" download class="report-btn">Download Report</a>
-    </section>
-  </main>
+  <section id="report" class="section">
+    <h2>Annual Earnings Report</h2>
+    <a href="AeginaSuite_AnnualReport.pdf" download class="btn">Download Report (PDF)</a>
+  </section>
 
-  <footer>
-    <p>© 2025 Aegina Suites IKE</p>
+  <section id="contact" class="section glass">
+    <h2>Contact Us</h2>
+    <p>Email: info@aeginasuites.gr<br/>Phone: +30 123 456 7890</p>
+  </section>
+
+  <footer class="footer">
+    <p>© 2025 Aegina Suites IKE. All rights reserved.</p>
   </footer>
 
+  <script src="script.js"></script>
 </body>
 </html>
-
