--- a/index.html
+++ b/index.html
@@ -1,59 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Aegina Suites IKE</title>
-<link rel="stylesheet" href="style.css" />
-<script src="https://cdn.jsdelivr.net/npm/three@0.150.1/build/three.min.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Aegina Suites IKE</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <header class="site-header">
+    <nav class="glass-nav">
+      <a href="#home">Home</a>
+      <a href="#team">Team</a>
+      <a href="#earnings">Earnings</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
-<header class="site-header">
-  <div class="logo">Aegina Suites IKE</div>
-  <nav class="glass-nav">
-    <a href="#home">Home</a>
-    <a href="#team">Team</a>
-    <a href="#earnings">Earnings</a>
-    <a href="#contact">Contact</a>
-  </nav>
-</header>
+  <main>
+    <section id="home" class="hero-section">
+      <h1 class="main-title">Aegina Suites IKE</h1>
+      <p class="subtitle">Delivering boutique luxury experiences in Aegina</p>
+    </section>
 
-<main>
-  <section id="home" class="section hero-section">
-    <canvas id="hero-canvas" class="hero-canvas"></canvas>
-    <div class="hero-content">
-      <h1 class="hero-title">Aegina Suites IKE</h1>
-      <p class="hero-subtitle">Delivering boutique luxury experiences in Aegina</p>
-    </div>
-  </section>
-
-  <section id="team" class="section team-section">
-    <h2>Meet the Team</h2>
-    <div class="team-cards">
-      <div class="team-card">
-        <h3>Panagiotis Markidis</h3>
-        <p>Co-Founder & CEO</p>
+    <section id="team" class="team-section">
+      <h2>Our Team</h2>
+      <div class="team-members">
+        <div class="member">
+          <h3>Panagiotis Markidis</h3>
+          <p>Founder & CEO</p>
+        </div>
+        <div class="member">
+          <h3>Christina Economopoulou</h3>
+          <p>Operations Manager</p>
+        </div>
+        <!-- Add more members if needed -->
       </div>
-      <div class="team-card">
-        <h3>Christina Economopoulou</h3>
-        <p>Co-Founder & COO</p>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <section id="earnings" class="section earnings-section">
-    <h2>Annual Earnings Report</h2>
-    <a href="AeginaSuite_AnnualReport.pdf" target="_blank" class="download-btn">Download PDF</a>
-  </section>
+    <section id="earnings" class="earnings-section">
+      <h2>Annual Earnings Report</h2>
+      <a href="AeginaSuite_AnnualReport.pdf" download class="download-button">
+        Download Report (PDF)
+      </a>
+    </section>
 
-  <section id="contact" class="section contact-section">
-    <h2>Contact Us</h2>
-    <p>Email: info@aeginasuites.gr</p>
-    <p>Phone: +30 210 123 4567</p>
-  </section>
-</main>
+    <section id="contact" class="contact-section">
+      <h2>Contact Us</h2>
+      <p>Email: info@aeginasuites.gr</p>
+      <p>Phone: +30 210 1234567</p>
+    </section>
+  </main>
 
-<script src="app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
