--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </section>
         <section id="team" class="section">
             <h2>Our Team</h2>
-            <div class="team">
+            <div class="team-container">
                 <div class="team-member">
                     <h3>Panagiotis Markidis</h3>
                     <p>Founder & CEO</p>
