--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <nav>
-        <ul>
+        <div class="menu-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <ul class="nav-menu">
             <li><a href="#header">Home</a></li>
             <li><a href="#team">Team</a></li>
             <li><a href="#annual-report">Annual Report</a></li>
