--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aegina Suites IKE Test</title>
+    <title>Aegina Suites IKE</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -22,6 +22,24 @@
     <main>
         <section id="header" class="section">
             <h1>Aegina Suites IKE</h1>
+            <p>Delivering boutique luxury experiences in Aegina</p>
+        </section>
+        <section id="team" class="section">
+            <h2>Our Team</h2>
+            <div class="team-container">
+                <div class="team-member">
+                    <h3>Panagiotis Markidis</h3>
+                    <p>Founder & CEO</p>
+                </div>
+                <div class="team-member">
+                    <h3>Christina Economopoulou</h3>
+                    <p>Operations & Guest Relations</p>
+                </div>
+            </div>
+        </section>
+        <section id="annual-report" class="section">
+            <h2>Annual Report</h2>
+            <a href="AeginaSuite_AnnualReport.pdf" download>Download Annual Report</a>
         </section>
     </main>
     <script src="app.js"></script>
