--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="loader">
+        <div class="spinner"></div>
+    </div>
     <nav>
         <div class="menu-toggle">
             <span></span>
